--- a/src/css/themes/infragistics/infragistics.theme.less
+++ b/src/css/themes/infragistics/infragistics.theme.less
@@ -1823,7 +1823,7 @@ input.ui-igbutton {
 }
 
 .ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
-    border-right: 1px solid @table-border-color;
+    border-right-color: @table-border-color;
 }
 /* BUG 246065 END */
 
@@ -3441,7 +3441,7 @@ input.ui-igbutton {
 
 .ui-radialgauge-tick {
   background-color: rgba(0, 0, 0, 0.35);
-  border-top-color: none;
+  border-top-color: transparent;
 }
 
 .ui-radialgauge-minorTick {
@@ -3480,7 +3480,7 @@ input.ui-igbutton {
 }
 
 .ui-radialgauge-container {
-  font-family: Verdana;
+  font-family: 'verdana', sans-serif;
   font-size: 11px;
 }
 /***********************/
@@ -3577,8 +3577,8 @@ input.ui-igbutton {
 }
 
 .ui-bulletgraph-container {
-  font-family: Verdana;
-  font-size: 11px;
+    font-family: 'verdana', sans-serif;
+    font-size: 11px;
 }
 
 /***********************/
@@ -3666,8 +3666,8 @@ input.ui-igbutton {
 }
 
 .ui-lineargauge-container {
-  font-family: Verdana;
-  font-size: 11px;
+    font-family: 'verdana', sans-serif;
+    font-size: 11px;
 }
 
 /***********************/
